kubernetes/apps/kube-system/spegel/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spegel
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: spegel
      app.kubernetes.io/instance: spegel
      app.kubernetes.io/name: spegel
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: spegel
              app.kubernetes.io/instance: spegel
              app.kubernetes.io/name: spegel
      ports:
        - port: 5001
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9090
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: spegel
              app.kubernetes.io/instance: spegel
              app.kubernetes.io/name: spegel
      ports:
        - port: 5001
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: spegel-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: spegel
      app.kubernetes.io/instance: spegel
      app.kubernetes.io/name: spegel
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: spegel-bootstrap.kube-system.svc.cluster.local
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: spegel-bootstrap.kube-system.svc.cluster.local
